--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -10,7 +10,7 @@ name = "Custom Theme"
   link_hover = "rgb(54, 54, 54)"
 
   # Menu
-  menu_primary = "rgb(153,238,255)"
+  menu_primary = "#867ade"
   menu_text = "#000"
   menu_text_active = "#0072ff"
   menu_title = "#000"
