--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -12,11 +12,15 @@ main:
     identifier: courses
   - name: Data science
     PageRef: course/data-science/_index.md
+    weight: 20
+    parent: courses
+  - name: Ludic Workshop
+    PageRef: course/ludic-workshop/_index.md
     weight: 10
     parent: courses
   - name: Robotics
     PageRef: course/robotics/_index.md
-    weight: 20
+    weight: 30
     parent: courses
   - name: Blog
     PageRef: post/_index.md
