--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ marketing:
     site_type: Organization
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo learning theme powered by Wowchemy website builder.'
+    description: 'Helping teachers and researchers find their freedom to play.'
     twitter: 'cheapshot'
   analytics:
     google_analytics: ''
