--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,20 +10,15 @@ main:
   - name: Courses
     weight: 20
     identifier: courses
-  - name: Data science
-    PageRef: course/data-science/_index.md
-    weight: 20
-    parent: courses
-  - name: Ludic Workshop
+  - name: Freedom to Play workshop
     PageRef: course/ludic-workshop/_index.md
     weight: 10
     parent: courses
-  - name: Robotics
-    PageRef: course/robotics/_index.md
-    weight: 30
-    parent: courses
   - name: Blog
     PageRef: post/_index.md
+    weight: 30
+  - name: Book
+    PageRef: book/_index.md
     weight: 30
   - name: Contact
     PageRef: contact/index.md
